--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <p>Minor</p>
             <p>Chromatic</p>
             <p>Pentatonic</p>
+            <p>Whole Tone</p>
           </div>
         </div>
         <p class="speed-title">Speed</p>
