added blues scale

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           <div class="scale-options">
             <p>Major</p>
             <p>Minor</p>
+            <p>Blues</p>
             <p>Chromatic</p>
             <p>Pentatonic</p>
             <p>Whole Tone</p>
