--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <p>Minor</p>
             <p>Blues</p>
             <p>Chromatic</p>
+            <p>Diminished</p>
             <p>Pentatonic</p>
             <p>Whole Tone</p>
           </div>
